# $Id$

2009-07-26 Robin Jones
	* Addded New Geocoders Yahoo and Google.
	* Geocoder now defaults to google if no country specific Geocoder is found (in future, this will be made selectable by network)
	* Fixed Postcode search on Find Hotspot Map #436
	* Added search for user by email closes #417
	* Added validation to networkID to stop database errors, closes #458
	

2009-07-10 Benoit Grégoire <benoitg@coeus.ca>
	* Fix bug editing user profiles introduced in [1339].

2009-07-03 Benoit Grégoire <benoitg@coeus.ca>
	* Refactor signup.php.  The code flow is still annoyingly unclear and complex, but the file is shorter and hopefully easier to debug (and hopefully fixes #593)

2009-06-26 Benoit Grégoire <benoitg@coeus.ca>
	* Updated greek translation by bill@e-texnologia.gr and strzol@gmail.com, still needs some work.
	
2009-06-25 Benoit Grégoire <benoitg@coeus.ca>
	* Fix #559
	* Fix #574
	* Fix bug introduced in 2009-06-23 patch for signing up new users.
	
2009-06-23 Benoit Grégoire <benoitg@coeus.ca>
	* Commit another slightly modified patch contributed by Zap Sherbrooke:  Allow generating publicly accessible statistics for the various nodes.  Enabled node per node.  Note that a cron must be setup for those stats to actually be generated.

2009-06-09 Benoit Grégoire <benoitg@coeus.ca>
	* Commit slightly modified patch contributed by Zap Sherbrooke:  Allow using the multiple account feature while keeping a common userbase.  Enabled in server configuration.

2008-10-13 Robin Jones
	* fixed #498 curley brace missing in portal.php

2008-10-02 Robin Jones
	* Support for redirecting to the users original URL instead of portal

2008-09-23 Robin Jones
	* Oops, forgot to include new style sheet into the previous commit.
	* Made Login template easier to edit using CSS and added example to NetworkFusion theme pack, This closes #343 .

2008-08-31 Robin Jones
	* Created ability to have a themes setting file to define commonly asked for features.